# AGENT-FuryAI-

./: CHANGELOG.md  README.md
agent/: .gitignore  README.md  pyproject.toml
agent/src/: auth.py  cli.py  config.py  main.py
agent/src/core/: agent.py  memory.py  sandbox.py  tools.py
agent/src/llm/: openrouter.py  provider.py
agent/src/tools/: file_ops.py  git_ops.py  shell.py  web_search.py
agent/tests/: __init__.py  test_agent.py  test_memory.py  test_sandbox.py
