[project]
name = "coding-agent"
version = "0.1.0"
description = "Open source AI coding agent"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests==2.31.0",
    "python-dotenv==1.0.1",
    "prompt-toolkit==3.0.48",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "mypy==1.11.1",
    "types-requests==2.31.0.20240125",
    "black==24.8.0",
    "ruff==0.6.2",
]

[project.scripts]
fury = "src.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
